--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,7 +1,7 @@
 body {
   background: url(../images/background-image.png);
   background-size: cover;
-  }
+  padding-bottom: 80px;}
 
 /* Nav Bar  */
 .navbar-light .navbar-brand {
