--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,9 +1,23 @@
+/* Table of Contents
+  1. Body
+  2. Nav Bar
+  3. Main Container
+  4. Images
+  5. Paragraph in About Me
+  6. Contact Info
+  7. Button
+  8. Footer
+     */
+
+
+
+/* 1. Body  */
 body {
   background: url(../images/background-image.png);
   background-size: cover;
   padding-bottom: 80px;}
 
-/* Nav Bar  */
+/* 2. Nav Bar  */
 .navbar-light .navbar-brand {
   color: #fff;
 }
@@ -12,7 +26,7 @@ body {
   background-color: teal;
 }
 
-/* Main Container  */
+/* 3. Main Container  */
 .container {
   background-color: whitesmoke;
 }
@@ -21,6 +35,7 @@ h2 {
   color: teal;
 }
 
+/* 4. Images  */
 .img-thumbnail {
   margin-right: 10px;
   padding: .25rem;
@@ -35,6 +50,7 @@ h2 {
   width:100%;
 }
 
+/* 5. Paragrah in About Me  */
 p {
   margin-top: 0rem;
   margin-bottom: 2rem;
@@ -47,15 +63,17 @@ p {
   width: 200px;
 }
 
-/* Contact Info */
+/* 6. Contact Info */
 .ml-4 {
   width: 80%;
 }
 
+/* 7. Button  */
 .btn-primary {
   background-color: teal;
 }
 
+/* 8. Footer  */
 footer {
   position: fixed;
   height: 50px;
