--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -45,7 +45,7 @@ body {
 
 .card {
   border-radius: 5px;
-  background-color: rgba(255,255,255, 0.2) !important;
+  background-color: rgba(255, 255, 255, 0.090) !important;
 }
 
 
