--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -101,12 +101,12 @@ i {
 
 div {
   padding-top: 10px;
-  text-decoration: none;
+  text-decoration: inherit;
 }
 
 a[href^="tel:"] {
   color:#66FCF1;
-  text-decoration: none;
+  text-decoration: inherit;
 }
 .fa {
   color: #66FCF1;
